--- a/ProjectOne/ProjectOne.csproj
+++ b/ProjectOne/ProjectOne.csproj
@@ -164,7 +164,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Instructions\Instructions.cs" />
+    <Compile Include="Instructions\ProjectOne.cs" />
+    <Compile Include="Instructions\ProjectTwo.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
