--- a/ProjectOne/ProjectOne.csproj
+++ b/ProjectOne/ProjectOne.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Instructions\ProjectOne.cs" />
     <Compile Include="Instructions\ProjectTwo.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Degrees.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
