--- a/ProjectOne/ProjectOne.csproj
+++ b/ProjectOne/ProjectOne.csproj
@@ -239,6 +239,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\Degrees.cshtml" />
     <Content Include="Views\Home\SelectedDegree.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
