--- a/ProjectOne/bin/ProjectOne.dll.config
+++ b/ProjectOne/bin/ProjectOne.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-ProjectOne-20161030035742.mdf;Initial Catalog=aspnet-ProjectOne-20161030035742;Integrated Security=True"
+    <add name="DegreeContext" connectionString="Data Source=ASUS\SQLEXPRESS;Initial Catalog=Degree;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
