--- a/ProjectOne/ProjectOne.csproj
+++ b/ProjectOne/ProjectOne.csproj
@@ -240,6 +240,7 @@
     <Content Include="Views\Home\Degrees.cshtml" />
     <Content Include="Views\Home\SelectedDegree.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\Register.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
