--- a/ProjectOne/Web.config
+++ b/ProjectOne/Web.config
@@ -19,13 +19,16 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <authentication mode="None" />
+    <!--<authentication mode="None" /> -->
+    <authentication mode="Forms">
+      <forms loginUrl="~/Home/Login" timeout="60" />
+    </authentication>
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
   </system.web>
   <system.webServer>
     <modules>
-      <remove name="FormsAuthentication" />
+     <!-- <remove name="FormsAuthentication" /> -->
     </modules>
   </system.webServer>
   <runtime>
