--- a/ProjectOne/Views/Web.config
+++ b/ProjectOne/Views/Web.config
@@ -1,4 +1,5 @@
-﻿<?xml version="1.0"?>
+﻿<!--/* Joshua Bean, Section 2, Group 14, Last Modified: December 8th, 2016, BYU IS FAQ Page-->
+<?xml version="1.0"?>
 
 <configuration>
   <configSections>
