--- a/ProjectOne/Web.config
+++ b/ProjectOne/Web.config
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--/* Joshua Bean, Section 2, Group 14, Last Modified: December 8th, 2016, BYU IS FAQ Page*/-->
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
