--- a/ProjectOne/Views/Web.config
+++ b/ProjectOne/Views/Web.config
@@ -1,5 +1,4 @@
-﻿<!--/* Joshua Bean, Section 2, Group 14, Last Modified: December 8th, 2016, BYU IS FAQ Page-->
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 
 <configuration>
   <configSections>
